# wham

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
cmake/: findOpenMPSIMD.cmake
notes/: TODO.txt
scripts/: test_cov.py
scripts/example/: compile.sh
src/: .Wham.cpp.swp  .Wham.h.swp  Bias.cpp  Bias.h  Bins.cpp  Bins.h  CMakeLists.txt  Distribution.cpp  Distribution.h  FileSystem.cpp  FileSystem.h  GenericFactory.h  Makefile  Matrix.h  OrderParameter.cpp  OrderParameter.h  StringTools.cpp  StringTools.h  TimeSeries.cpp  TimeSeries.h  Wham.cpp  Wham.h  WhamDlibWrappers.cpp  main.cpp
src/driver/: main.cpp
src/wham/: Avg_x_Given_y.cpp  Avg_x_Given_y.hpp  Bias.cpp  Bias.h  BiasedDistributions.cpp  BiasedDistributions.hpp  Bins.cpp  Bins.h  BootstrapHandler.cpp  BootstrapHandler.hpp  BootstrapSubsampler.cpp  BootstrapSubsampler.h  Bootstrap_BiasingFreeEnergies.cpp  Bootstrap_BiasingFreeEnergies.hpp  Bootstrap_F_x.cpp  Bootstrap_F_x.hpp  CMakeLists.txt  Constants.h  DataSummary.cpp  DataSummary.h  Distribution.cpp  Distribution.h  Distribution2D.hpp  Estimator_Avg_x_Given_y.cpp  Estimator_Avg_x_Given_y.hpp  Estimator_F_x.cpp  Estimator_F_x.hpp  Estimator_F_x_y.cpp  Estimator_F_x_y.hpp  FileSystem.cpp  FileSystem.h  FreeEnergyDistribution.cpp  FreeEnergyDistribution.hpp  FreeEnergyDistribution2D.cpp  FreeEnergyDistribution2D.hpp  FreeEnergyDistributionSet.cpp  FreeEnergyDistributionSet.hpp  GenericFactory.h  GptlWrappers.cpp  GptlWrappers.h  (+36 more)
test/: CMakeLists.txt  run_test.sh
test/indus/bulk_water/: README
test/indus/bulk_water/data/nstar_-3.2/: plumed.out
test/indus/bulk_water/data/nstar_-8.7/: plumed.out
test/indus/bulk_water/data/nstar_13.3/: plumed.out
test/indus/bulk_water/data/nstar_18.8/: plumed.out
test/indus/bulk_water/data/nstar_2.3/: plumed.out
test/indus/bulk_water/data/nstar_24.3/: plumed.out
test/indus/bulk_water/data/nstar_7.8/: plumed.out
test/indus/bulk_water/data/unbiased/: time_samples.out
test/indus/bulk_water/omp_run_wham/: F_N_biased.out  F_Ntilde_biased.out  F_Ntilde_unbiased.out  avg_N_given_Ntilde.out  make_wham_plots.sh  output_files_to_check.input  stats_N.out  wham_options.input
test/indus/bulk_water/omp_run_wham/ref/: bins_Ntilde.out  bootstrap_convergence.out  f_bias_WHAM.out  output_files_to_check.input  stats_Ntilde.out  wham_options.input
test/indus/bulk_water/run_wham/: F_N_WHAM.out  F_N_biased.out  F_N_rebiased.out  F_N_unbiased.out  F_Ntilde_WHAM.out  F_Ntilde_biased.out  F_Ntilde_rebiased.out  F_x_WHAM.out  F_x_biased.out  F_x_rebiased.out  F_x_unbiased.out  F_y_biased.out  F_y_reweighted.out  F_y_unbiased.out  GlobalSampleCounts_x.out  bins_N.out  check.sh  info_for_plots.out  output_files_to_check.input  run_WHAM.sh  samples_x_y.out  stats_N.out  stats_x.out  stats_y.out  wham_options.input  x_grid.out  y_grid.out
test/indus/bulk_water/run_wham/ref/: F_N_WHAM.out  F_N_biased.out  F_Ntilde_biased.out  F_Ntilde_rebiased.out  F_Ntilde_unbiased.out  F_x_WHAM.out  F_x_biased.out  F_x_rebiased.out  F_x_unbiased.out  F_x_y_WHAM.out  F_y_WHAM.out  F_y_biased.out  F_y_rebiased.out  F_y_unbiased.out  check.sh  f_bias_WHAM.out  info_for_plots.out  make_wham_plots.sh  samples_x_y.out  stats_Ntilde.out  stats_x.out  time_series_files_list.input  wham_options.input  y_grid.out
